--- a/index.html
+++ b/index.html
@@ -347,6 +347,12 @@
 </head>
 <body>
   <div x-data="{
+    showHolidayPopup: false,
+    init() {
+       if (!localStorage.getItem('holidayPopupSeen')) {
+       this.showHolidayPopup = true;
+      }
+     },
     isOpen: false,
     selectedItem: '',
     activeSkillCategory: 'industryKnowledge',
@@ -878,5 +884,38 @@
       }
     }
   </script>
+
+  <!-- Holiday Popup Backdrop -->
+<div
+  x-show="showHolidayPopup"
+  x-cloak
+  class="fixed inset-0 bg-black bg-opacity-80 z-[999]"
+  @click="showHolidayPopup = false; localStorage.setItem('holidayPopupSeen', true)"
+></div>
+
+<!-- Holiday Popup Modal -->
+<div
+  x-show="showHolidayPopup"
+  x-cloak
+  x-transition
+  class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-[#1f1f1f] text-white rounded-xl shadow-2xl p-8 max-w-md w-[90%] z-[1000] text-center"
+>
+  <h2 class="text-2xl font-bold text-red-500 mb-4">
+    🎄 Happy Holidays!
+  </h2>
+
+  <p class="text-gray-300 mb-6 leading-relaxed">
+    Wishing you a joyful holiday season and a secure, resilient year ahead.
+    Thank you for stopping by — let’s build safer systems in 2026.
+  </p>
+
+  <button
+    class="bg-red-600 hover:bg-red-700 transition px-6 py-2 rounded-full font-semibold"
+    @click="showHolidayPopup = false; localStorage.setItem('holidayPopupSeen', true)"
+  >
+    Close
+  </button>
+</div>
+
 </body>
 </html>
