Color Change to Purple

--- a/cybersecurity-periodic-table.html
+++ b/cybersecurity-periodic-table.html
@@ -92,7 +92,7 @@
         .framework { background: #007bff; }
         .concept { background: #6c757d; }
         .defensive { background: #6c757d; color: #fff; }
-        .role { background: linear-gradient(135deg, #1e3a8a 0%, #3b82f6 100%); }
+        .role { background: linear-gradient(135deg, #5b21b6 0%, #8b5cf6 100%); }
         
         .periodic-table {
             display: grid;
