Fix periodic table layout by adding missing nulls

--- a/cybersecurity-periodic-table.html
+++ b/cybersecurity-periodic-table.html
@@ -1746,7 +1746,7 @@
         
         // Periodic table layout - 16 columns total
         const tableLayout = [
-            ['PH', null, null, null, null, null, null, null, null, null, null, 'SB', 'EP', 'FL', null, null],
+            ['PH', null, null, null, null, null, null, null, null, null, null, null, null, 'SB', 'EP', 'FL'],
             ['MW', null, null, null, null, null, null, null, null, null, 'ME', 'IS', 'OW', 'TI', 'SE', 'VP'],
             ['RW', 'CS', 'DD', null, null, null, null, null, null, null, 'NC', 'CT', 'PS', 'VA', 'AC', 'Ed'],
             ['SW', 'US', 'OP', 'BA', 'PE', 'CJ', 'NM', 'BS', 'JR', 'MZ', 'ST', 'S2', 'HP', 'SU', 'RA', 'SM'],
