--- a/cybersecurity-periodic-table.html
+++ b/cybersecurity-periodic-table.html
@@ -379,6 +379,21 @@
     </style>
 </head>
 <body>
+
+    <body>
+    <!-- Header Navigation -->
+    <div style="background-color: #141414; padding: 15px 20px; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 100; border-radius: 0 0 8px 8px; max-width: 1200px; margin: 0 auto;">
+        <a href="https://www.jayakrishnancp.com/" style="font-size: 1.8rem; font-weight: bold; color: #E50914; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); text-decoration: none;">
+            Jayakrishnan C Prakash
+        </a>
+        <nav style="display: flex; gap: 25px;">
+            <a href="https://www.jayakrishnancp.com/#experience" style="color: #fff; text-decoration: none; font-size: 1.1rem; font-weight: bold; transition: color 0.3s ease;">Experience</a>
+            <a href="https://www.jayakrishnancp.com/#skills" style="color: #fff; text-decoration: none; font-size: 1.1rem; font-weight: bold; transition: color 0.3s ease;">Skills</a>
+            <a href="https://www.jayakrishnancp.com/#projects" style="color: #fff; text-decoration: none; font-size: 1.1rem; font-weight: bold; transition: color 0.3s ease;">Projects</a>
+            <a href="https://www.jayakrishnancp.com/" style="color: #E50914; text-decoration: none; font-size: 1.1rem; font-weight: bold;">Home</a>
+        </nav>
+    </div>
+        
     <div class="container">
         <h1>CYBERSECURITY LANDSCAPE MAP</h1>
         <p class="subtitle">Click any element to learn more about it</p>
