--- a/index.html
+++ b/index.html
@@ -1028,17 +1028,17 @@
 
   </div>
 
- // <script>
+  <script>
     // Function to scroll carousels (only used for Experience section now)
-//    function scrollCarousel(id, scrollAmount) {
- //     const carousel = document.getElementById(id);
-  //    if (carousel) {
-  //      carousel.scrollBy({
-   //       left: scrollAmount,
-    //      behavior: 'smooth'
-   //     });
-   //   }
-   // }
-//  </script>
+    function scrollCarousel(id, scrollAmount) {
+    const carousel = document.getElementById(id);
+    if (carousel) {
+       carousel.scrollBy({
+       left: scrollAmount,
+       behavior: 'smooth'
+       });
+     }
+   }
+  </script>
 </body>
 </html>
